# arkive-v4-asset-service

./: Cargo.toml
src/: main.rs
src/enums/: mod.rs
src/routes/: crud_routes.rs  extension_routes.rs  foundry_routes.rs  mod.rs  thumbnail_routes.rs  upload_routes.rs
src/state/: models.rs
src/utils/: auth_utils.rs  db_utils.rs  extractors.rs  image_utils.rs  mod.rs  s3_utils.rs
