[package]
name = "arkive-v4-image-service"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-s3 = "1.43.0"
axum = { version = "0.7.5", features = ["multipart", "query"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-macros = "0.4.1"
base64 = "0.22.1"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
postgres-types = { version = "0.2.7", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1", "with-serde_json-1"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
