[package]
name = "arkive-v4-image-service"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.43.0"
axum = { version = "0.7.5", features = ["multipart", "query"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.13.0"
base64 = "0.22.1"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
hmac = "0.12.1"
image = "0.25.2"
postgres-types = { version = "0.2.7", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1", "with-serde_json-1"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "json", "tracing", "chrono"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
webp = "0.3.0"

[profile.dev]
opt-level = 1
